// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Panel Tests Render Test 1`] = `
<ErrorPanel>
  <Dialog
    actions={
      {
        "end": [
          <Button
            caption="Close"
            onClick={[Function]}
          />,
        ],
      }
    }
    caption={
      <p>
        <Icon
          disabled={false}
          src={124}
        />
        <Label>
          
        </Label>
      </p>
    }
    className="msg errorPanel"
    container={
      <body
        theme="dark"
      />
    }
    content={
      <Container
        orientation="column"
      >
        
      </Container>
    }
  >
    <Portal
      container={
        <body
          theme="dark"
        />
      }
      onClose={[Function]}
      onOpen={[Function]}
    />
  </Dialog>
</ErrorPanel>
`;

exports[`Error Panel Tests Show Panel 1`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible errorPanel"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-error"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Error
      </label>
      <div
        class="msg button imageOnly"
        draggable="true"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        <label
          class="msg label"
          data-tooltip="expand"
          id="errorMessage"
          style="white-space: pre-line;"
        >
          One line
        </label>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="Close"
          class="msg button"
          draggable="true"
          role="button"
          tabindex="0"
        >
          Close
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Error Panel Tests Show Panel 2`] = `
<div
  class="msg portal"
  style="--background-opacity: 0.5;"
>
  <div
    class="msg dialog visible errorPanel"
  >
    <div
      class="title verticalCenterContent"
    >
      <div
        class="msg icon codicon codicon-error"
      />
      <label
        class="msg label"
        data-tooltip="expand"
      >
        Caption
      </label>
      <div
        class="msg button imageOnly"
        draggable="true"
        id="closeButton"
        role="button"
        tabindex="0"
      >
        <div
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </div>
    </div>
    <div
      class="content fixedScrollbar"
    >
      <div
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        <label
          class="msg label"
          data-tooltip="expand"
          id="errorMessage"
          style="white-space: pre-line;"
        >
          Line 1
Line 2
        </label>
      </div>
    </div>
    <div
      class="footer verticalCenterContent"
    >
      <div
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <div
          caption="Close"
          class="msg button"
          draggable="true"
          role="button"
          tabindex="0"
        >
          Close
        </div>
      </div>
    </div>
  </div>
</div>
`;
